--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Materiales de informática # the main title
 tagline: Recopilación de materiales didácticos de informática # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Recopilación de materiales didácticos de informática.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
